--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="1;url=http://example.com">
+<meta http-equiv="refresh" content="1;url=http://www.ultrapowa.us/#!404.md">
 <script type="text/javascript">
-     window.location.href = "http://example.com"
+     window.location.href = "http://www.ultrapowa.us/#!404.md"
 </script>
